# ChangeLog for dev-haskell/transformers-compat
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/transformers-compat/ChangeLog,v 1.4 2014/07/25 09:16:17 slyfox Exp $

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org>
  transformers-compat-0.1.1.1.ebuild, transformers-compat-0.3.3.4.ebuild:
  Drop trailing '.' from description.

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Drop redundant '<maintainer>' field, leave only '<herd>'.

*transformers-compat-0.3.3.4 (02 Jul 2014)

  02 Jul 2014; Mark Wright <gienah@gentoo.org>
  +transformers-compat-0.3.3.4.ebuild:
  Bump transformers-compat to 0.3.3.4

*transformers-compat-0.1.1.1 (26 Aug 2013)

  26 Aug 2013; Alexander Vershilov <qnikst@gentoo.org> +metadata.xml,
  +transformers-compat-0.1.1.1.ebuild:
  dev-haskell/transformers-compat: initial layout