@@ -4,13 +4,13 @@ Hash: SHA256
 DIST transformers-compat-0.1.1.1.tar.gz 5221 SHA256 32264f5160b92ac72412ddf760c410130eb84ace710774bd430a5b8dab630b44 SHA512 326873df4a316948d64ddbee351f0bf2855b5f2bac1913eed3ca490305363771fc031ff6cad1e6de5849ab375ace9364ffb18e56cb8a57f0406508377f521a54 WHIRLPOOL c6e113bc9fdc892ff4e5eb8a324214d82173de03342d64871e9873b5b68a3576c9dd0aab08d0e693fec6f83adccd9a2e3b1302266dbe0b3ff8f23ef1ce1fb99c
 DIST transformers-compat-0.3.3.4.tar.gz 11143 SHA256 257712be0c2d5eedc6c835421751fce8daf45cf2687f2d6c27b92bff5e204bc1 SHA512 1f50ddeaec4ea2e17ec348194a6efcfab35c4b9d49f9eba9e70a0c1ebfdfd39387461c133fb99e6cdad234b7facae74fa73c99f604807d7f3ad7c31d0188d462 WHIRLPOOL 8cc99827a3e14fd658a90f935d8f1c0114685ebe3922dc446661e628fd3e6898a425767ba57527ced4281bf877d99f8ec526a74ac852fab00bd7db95146bf599
 EBUILD transformers-compat-0.1.1.1.ebuild 803 SHA256 b46ac014116a444df22b8aa18ac8704ee0e2d9c8fc16785f13d4175811e6f375 SHA512 4826c701910a31d8a3e462eab44749d73cf4d31738d8abdb0a0b6ded875e08b40a465d858cd951a7c99ca55cf986a1cabb1bbfbf88b43c533f416f24b62cb004 WHIRLPOOL 6d18e54ffddbea2f995f0fd2a020e5f7475ad5a38644692f76af94e09da6e5078e8d351d0ef73470024f684936dfea6992514adf7d1fbc531a65f0e387feeb1e
-EBUILD transformers-compat-0.3.3.4.ebuild 798 SHA256 591a8db019054ad53eadc9dabdfb5420ab2ef378dbd9fe1850ad900c931be47d SHA512 eba578885422f7b6b3d1dc9d6a9914b75b48dceda54b955dcb1c6066878cf5da570bf93ba366022da6b2d5875802b0b53d2f2c65a1983441c4c50af12eb6075b WHIRLPOOL 91d2a9d922050d8cb20652511b3ce60d35512763de34862baa9d5d932ec6a286e098441007578088d0202c6592374d86c992d10c2c13fb5b89da182cbf9dac2b
-MISC ChangeLog 903 SHA256 a4061ef12eafaba9b878dd405febfd895a94a7d2736ce5323f47a5f75fb25a2c SHA512 6931c11ed5b6a249766447c3adeef1ab52c48c092aac9fd0c807cfc9fbb65b4667329be77cb04524aadb01c1d8274bd2c894d36391e362867db4c0780022ff86 WHIRLPOOL 382e292bb262cebf9a2de33d84013f4cf6c002ee9c40eb27cf18d7ceab58a9bf34c0a60087a34e4617d85bd7ee0b42f853c097d6f36a4c50484f3e6bf2620a81
-MISC metadata.xml 633 SHA256 c8ac6c375dcf891d0e2305a05a179c77dfb68d21800ac243a5e5b1b213bb423b SHA512 dd2dadfe2b0f3482e4a843de0a405479c2af43fe30cc84d3a4c07e6aeaf8caea7b82e3bc5bad9c6fe245b7c8edd4eaf98d810bec2f969c85710f81c6dd5ae212 WHIRLPOOL 7a00721d16fff1a670fecdd5e108c826f8ecb3037a2c4c34e681402043c143bcc5e19a39c7205627d35c4755a59761970f91724e88b0678b9b1c6153ce394a96
+EBUILD transformers-compat-0.3.3.4.ebuild 1034 SHA256 126fb2f21a6d0c2f32ca770672acee7fa055090bab73c87b4a3e343904c96cc7 SHA512 17bf8f08b372b8a2c5e73d81ea96b3f54861ae0b7609f5e89cd0287ab4bd553031cbde5dc0c72f1e4c67bdf7c2f1e3178105712027c986b2072e71217852ff45 WHIRLPOOL d2989bec937d7b0c2c993b8c6982d9aa2d30c4d096f7dcb8ad62aabb563d271b6ff72a6e5427deba6a490eba62f68ad941af87c3a87f6e13e4ed343fc43b7277
+MISC ChangeLog 1059 SHA256 21074ff86ebc201d8f4c4424fd94183008b7047032ba607e8676012d8d0df518 SHA512 3688dc80f27ddf8a0f38be047422e97c5225391aaca439c3ea2c5861155ad6360432617daf8a740839f11db25b79b76b3e49c23778ee98d6e9908419b8f121df WHIRLPOOL 31120e835bd9dee5c5bc3d3895833ba7670e9cab211c69de0814d6b0d6625756ff1da5c75ab1e6c586e09aaa1ceae2e91d424c90bba196e5b0bef38727e17d93
+MISC metadata.xml 698 SHA256 d9df0ed7f9ff26808955ed0d44cfdb6211e939d6eba6509273e4570cc85e64b5 SHA512 890b8a678e7fcf2e217a8b813ba9bb76785bf9c5f879838aa55ce6c02cba83d7aa3d0619fa4212b727b64542d1aec296fa11c1d48aef2a39d3893f2bf8f6f8ab WHIRLPOOL 9ff0c4d29bece2706be17ae1037ac07def1bb3b26afe93c70affb0aa0b5b2f02def3b51fb4ca409937661af15e0566729628b7449befb80fbcd45fe22526cc7f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlPSIPgACgkQcaHudmEf86qB+ACcDJCAxPWbLiiXOTX8lAlIVdhx
-LzkAn1AVVVF2MOTo19FAclUDba79RieI
-=Lbn6
+iEYEAREIAAYFAlQnHjsACgkQcaHudmEf86qe3wCfRFAFQvuvecLGgaPvENvI6rMZ
+VDMAnin5YMKSg+xzwmI1r/nh9cKY0RLY
+=IYOB
 -----END PGP SIGNATURE-----
