@@ -1,10 +1,11 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/transformers-compat/transformers-compat-0.3.3.4.ebuild,v 1.2 2014/07/25 09:16:17 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/transformers-compat/transformers-compat-0.3.3.4.ebuild,v 1.3 2014/09/27 20:29:44 slyfox Exp $
 
 EAPI=5
 
-# ebuild generated by hackport 0.4.9999
+# ebuild generated by hackport 0.4.4.9999
+#hackport: flags: -two
 
 CABAL_FEATURES="lib profile haddock hoogle hscolour"
 inherit haskell-cabal
@@ -16,11 +17,18 @@ SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0/${PV}"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="three"
 
-RDEPEND=">=dev-haskell/transformers-0.2:=[profile?] <dev-haskell/transformers-0.5:=[profile?]
-		>=dev-lang/ghc-7.4.1:=
+RDEPEND=">=dev-lang/ghc-7.4.1:=
+	three? ( >=dev-haskell/transformers-0.3:=[profile?] <dev-haskell/transformers-0.4:=[profile?] )
+	!three? ( >=dev-haskell/transformers-0.4.1:=[profile?] <dev-haskell/transformers-0.5:=[profile?] )
 "
 DEPEND="${RDEPEND}
 	>=dev-haskell/cabal-1.8
 "
+
+src_configure() {
+	haskell-cabal_src_configure \
+		$(cabal_flag three three) \
+		--flag=-two
+}
