@@ -1,6 +1,10 @@
 # ChangeLog for dev-haskell/transformers-compat
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/transformers-compat/ChangeLog,v 1.4 2014/07/25 09:16:17 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/transformers-compat/ChangeLog,v 1.5 2014/09/27 20:29:44 slyfox Exp $
+
+  27 Sep 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml,
+  transformers-compat-0.3.3.4.ebuild:
+  Exported control knob for transformers depend.
 
   25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org>
   transformers-compat-0.1.1.1.ebuild, transformers-compat-0.3.3.4.ebuild:
